<resources>
    <string name="app_name">Pastir</string>
    <string name="donation_email">nnuspahic@yahoo.com</string>
    <string name="donation_phone_number">+381 60 4422 357</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Početna</string>
    <string name="donate">Doniraj</string>
    <string name="settings">Podešavanja</string>
    <string name="ellen_white">Ellen White</string>
    <string name="songbook">Pesmarica</string>
    <string name="morning_verses">Jutarnji stihovi</string>
    <string name="lesson">Pouka</string>
    <string name="bible">Biblija</string>
    <string name="motivational_messages">Motivacione Poruke</string>
    <string name="see_all">Vidi sve</string>
    <string name="events">Događaji</string>
    <string name="calendar">Kalendar</string>
    <string name="not_implemented">Uskoro!</string>
    <string name="back">Back</string>
    <string name="close">Zatvori</string>
    <string name="no_morning_verse">Za izabrani datum ne postoji jutarnji stih.</string>
    <string name="no_lesson">Za izabrani datum ne postoje podaci.</string>
    <string name="sunrise_sunset">Svitanje / Zalazak</string>
    <string name="sunrise">Svitanje:</string>
    <string name="sunset">Zalazak:</string>
    <string name="radio">Radio</string>

    <!-- Accessibility strings-->
    <string name="share_accessibility">Share this picture</string>
    <string name="motivational_sticker_accessibility">Motivational sticker</string>
    <string name="radio_voice_of_hope">Radio glas nade</string>
    <string name="buffering_content">Učitavanje sadržaja</string>
    <string name="error_reading_error">Error reading server\'s response</string>
    <string name="no_internet_connection">Nije detektovan Internet</string>
    <string name="error_cannot_parse">Error while parsing server\'s results</string>
    <string name="no_location">Nije moguce dobiti vašu lokaciju.</string>
    <string name="donation_message_1">Sva vaša pitanja ili sugestije mozete nam poslati na sledeću email adresu:</string>
    <string name="donation_message_2">ili nas kontaktirati na broj telefona:</string>
    <string name="telepfony_not_enabled">Pozivi nisu mogući na uređaju.</string>
    <string name="error_lesson_audio">Za izabranu pouku ne postoji audio snimak.</string>
    <string name="error_morning_verse_audio">Za izabrani jutarnji stih ne postoji audio snimak.</string>
    <string name="no_internet_connection_message">Za korišćenje ove aplikacije potrebna je Internet konekcija. Molimo vas da ukljucite Internet i pokušate ponovo.\nHvala!</string>
    <string name="check_again">Probaj ponovo</string>
    <string name="exit">Izadji</string>
    <string name="books">Knjige</string>
    <string name="chapters">Poglavlja</string>
    <string name="verse">Stih</string>
    <string name="verses">Stihovi</string>


</resources>
