<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_morning_verses"
            android:icon="@drawable/ic_sun_white"
            android:title="@string/morning_verses"/>
        <item
            android:id="@+id/nav_lesson"
            android:icon="@drawable/ic_lessons"
            android:title="@string/lesson"/>
        <item
            android:id="@+id/nav_bible"
            android:icon="@drawable/ic_bible"
            android:title="@string/bible"/>
        <!--<item-->
            <!--android:id="@+id/nav_songbook"-->
            <!--android:icon="@drawable/ic_songbook"-->
            <!--android:title="@string/songbook"/>-->
        <!--<item-->
            <!--android:id="@+id/nav_ellen_white"-->
            <!--android:icon="@drawable/ic_ellen_white"-->
            <!--android:title="@string/ellen_white"/>-->
        <!--<item-->
            <!--android:id="@+id/nav_settings"-->
            <!--android:icon="@drawable/ic_settings"-->
            <!--android:title="@string/settings"/>-->
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_donate"
            android:title="@string/donate"/>

    </group>
</menu>
