<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.pastir.presenter.DonationPresenter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:textColor="@color/colorBlack"
            android:text="@string/donation_message_1"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:onClick="@{()->presenter.sendEmail()}"
            android:text="@string/donation_email"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:textColor="@color/colorBlack"
            android:text="@string/donation_message_2"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:onClick="@{()->presenter.callPhone()}"
            android:text="@{@string/donation_phone_number + `.`}"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_medium"
            tools:text="@string/donation_phone_number" />

    </LinearLayout>
</layout>