<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="motivationalSticker"
            type="com.pastir.model.MotivationalSticker"/>

        <variable
            name="activity"
            type="com.pastir.activity.MotivationalStickerDialogActivity"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        >

        <ImageView
            android:id="@+id/ivMotivationalSticker"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:contentDescription="@string/motivational_sticker_accessibility"
            android:scaleType="fitXY"
            bind:imageUrl="@{motivationalSticker.imageMain}"
            />

        <RelativeLayout
            android:layout_below="@+id/ivMotivationalSticker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/ivShare"
                android:layout_toStartOf="@+id/ivShare"
                android:onClick="@{()->activity.dismiss()}"
                android:text="@string/close"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_medium"/>

            <ImageView
                android:id="@+id/ivShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/share_accessibility"
                android:onClick="@{()->activity.onShareClicked(motivationalSticker)}"
                android:paddingEnd="@dimen/default_padding"
                android:paddingStart="@dimen/default_padding"
                android:src="@drawable/ic_share"/>

        </RelativeLayout>

    </RelativeLayout>
</layout>