<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.pastir.presenter.HomePresenter"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:orientation="vertical"
            tools:context="com.pastir.fragment.HomeFragment">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/motivational_messages"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_medium_large"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:onClick="@{()->presenter.onSeeAllMotivationClicked()}"
                    android:text="@string/see_all"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_medium_large"
                    />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvMotivationalStickers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:scrollbars="horizontal"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/events"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_medium_large"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:onClick="@{()->presenter.onSeeAllEventsClicked()}"
                    android:text="@string/see_all"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_medium_large"
                    />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:scrollbars="horizontal"
                />

        </LinearLayout>
    </ScrollView>
</layout>